objects/Account_Hierarchy__c.object
<CustomObject>
	<fields>
		<fullName>Account__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Account</label>
		<referenceTo>Account</referenceTo>
		<relationshipLabel>Account Hierarchy</relationshipLabel>
		<relationshipName>Account_Hierarchy</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>ParentId__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>ParentId</label>
		<referenceTo>Account</referenceTo>
		<relationshipLabel>Account Hierarchy (ParentId)</relationshipLabel>
		<relationshipName>Account_HierarchyParent</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Top_Parent__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Top Parent</label>
		<referenceTo>Account</referenceTo>
		<relationshipLabel>Account Hierarchy (Top Parent)</relationshipLabel>
		<relationshipName>Account_HierarchyTopParent</relationshipName>
		<type>Lookup</type>
	</fields>
	<label>Account Hierarchy</label>
	<listViews>
		<fullName>All</fullName>
		<columns>NAME</columns>
		<columns>OBJECT_ID</columns>
		<columns>Account__c</columns>
		<columns>Top_Parent__c</columns>
		<columns>ParentId__c</columns>
		<columns>CREATEDBY_USER</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
		<language>en_US</language>
	</listViews>
	<listViews>
		<fullName>All1</fullName>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>A{0000000000}{YYYY}</displayFormat>
		<label>Account Hierarchy Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Account Hierarchy</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>